"JUnits added for ServiceImpl.java and Controller.java"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ logging.pattern.console= %clr(%date{ISO8601}){magenta} %clr(%-5level) %clr(%clas
 #output log file
 logging.file.name = application.log
 #Logging pattern for the file
-logging.pattern.file=%date{ISO8601} %-5level %class{0}:%L - [%X] %msg%n
+logging.pattern.file=%date{ISO8601} %-5level %class{0}:%L - [%X] %msg%
+
+localhost=8080
